# agentic-ai-tutorial

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
case_study/: README.md
case_study/crewai/: README.md  __init__.py  config.example.json  evaluate.py  run.py
case_study/failures/: README.md  __init__.py  run.py
case_study/fixtures/v1/: catalogue.json  failure_scenarios.json  model_scripts.json  specification.json
case_study/langgraph/: README.md  __init__.py  config.example.json  evaluate.py  run.py
case_study/openai_agents/: README.md  __init__.py  evaluate.py  run.py
case_study/plain_python/: README.md  run.py
data/data_analysis_assistant/: README.md  case_mock.json  expected_summary.json  household_waste.csv
data/research_assistant/: case_mock.json  evidence_catalogue.json  pattern_mock_scenarios.json  prompt_chaining_mock.json
data/service_assistant/: README.md  case_mock.json  simulated_service.json
docs/: architecture.md  codex_workflow.md  compatibility.md  glossary.md  implementation_backlog.md  learning_path.md  local_model.example.json  local_model.md  project_decisions.md  release_checklist.md  reproducibility.md  safety.md  shared_foundation.md
evaluation/: README.md  __init__.py  compare.py  local_model.py  run.py
evaluation/comparison/: README.md
evaluation/comparison/results/: config.json  result.json  summary.csv
frameworks/: __init__.py
frameworks/crewai/: __init__.py  research_assistant.py
frameworks/langgraph/: __init__.py  research_assistant.py
frameworks/openai_agents/: __init__.py  research_assistant.py
models/: qualification_candidates.json
models/local/: README.md  model_metadata.json
notebooks/: 01_components_walkthrough.ipynb  02_execution_patterns.ipynb  03_framework_comparison.ipynb  README.md
notebooks/.ipynb_checkpoints/: 01_components_walkthrough-checkpoint.ipynb
notebooks/case_studies/: README.md
notebooks/case_studies/data_analysis_assistant/: README.md  crewai.ipynb  langgraph.ipynb  openai_agents.ipynb  plain_python.ipynb
notebooks/case_studies/independent/: README.md
notebooks/case_studies/research_assistant/: README.md  crewai.ipynb  langgraph.ipynb  (+2 more)
notebooks/patterns/: crewai_patterns.ipynb  langgraph_patterns.ipynb  openai_agents_patterns.ipynb  plain_python_patterns.ipynb
patterns/: README.md
patterns/critic_reviser/: README.md  run.py
patterns/orchestrator_worker/: README.md  run.py
patterns/planner_executor/: README.md  run.py
patterns/prompt_chaining/: README.md  run.py
patterns/react_tool_use/: README.md  run.py
patterns/routing_parallelisation/: README.md  run.py
scripts/: audit_public.py  check_docs.py  check_notebooks.py  check_reproducibility.py
src/agentic_tutorial/: __init__.py  cli.py  notebook.py
tests/: __init__.py  test_agent_loop.py  test_approval_workflow.py  test_budgets.py  test_case_study_specification.py  test_checkpoints.py  test_crewai_case_study.py  test_documentation.py  test_education_patterns.py  test_education_tutorials.py  test_evaluation.py  test_failure_scenarios.py  test_fixtures.py  test_framework_comparison.py  test_langgraph_case_study.py  test_local_llama_cpp.py  test_model_interface.py  test_model_qualification.py  test_models.py  test_notebook_contract.py  test_notebook_mock_execution.py  test_offline_clients.py  test_openai_agents_case_study.py  test_optional_gemini_qualification.py  test_optional_local_qualification.py  test_package.py  test_plain_python_case_study.py  test_release_checks.py  test_safety.py  test_schemas.py  test_tools.py  test_tracing.py
tutorials/: README.md
tutorials/basic_model/: README.md  run.py
tutorials/bounded_tracing/: README.md  run.py
tutorials/critique_validation/: README.md  run.py
tutorials/explicit_state/: README.md  run.py
tutorials/human_approval/: README.md  run.py
tutorials/planning/: README.md  run.py
tutorials/retained_context/: README.md  run.py
tutorials/tool_use/: README.md  run.py
(+79 files in other folders)
