[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "agentic-ai-tutorial"
version = "0.1.0"
description = "Notebook-first companion to A Practical Tutorial on Agentic AI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "Apache-2.0"
dependencies = ["pydantic>=2.11,<3"]

[project.optional-dependencies]
crewai = ["appdirs>=1.4.4,<2", "crewai>=1.15.2,<1.16"]
langgraph = ["langgraph>=1.2.9,<1.3"]
local-llama-cpp = ["llama-cpp-python>=0.3.34,<0.4"]
openai-agents = ["openai-agents>=0.17.4,<0.18"]

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.3,<9",
    "ruff>=0.11,<1",
]
notebooks = [
    "ipykernel>=6.29,<7",
    "jupyterlab>=4.4,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_tutorial"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
markers = ["slow: optional tests requiring a local model or live provider"]
filterwarnings = ["ignore:.*:DeprecationWarning:crewai.*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
